working on MSDFErrorCorrection